Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestampz [not null, default: "0001-01-01 00:00:00Z"]
  created_at timestamptz [not null, default: "now()"]
}

Table accounts as A {
  id bigserial [pk, unique, increment]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: "now()"]
  Indexes {
    owner
   (owner, currency)
  }
}

Table entries {
  id bigserial [pk, unique, increment]
  account_id bigint [not null, ref: > A.id]
  amount bigint [not null, note: "can be negative or positive"]
  created_at timestamptz [not null, default: "now()"]
  Indexes {
    account_id
    }
}

Table transfers {
  id bigserial [pk, unique, increment]
  from_account_id bigint [not null, ref: > A.id]
  to_account_id bigint [not null, ref: > A.id]
  amount bigint [not null, note: "must be positive"]
  created_at timestamptz [not null, default: "now()"]
  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk, unique]
  username varchar [not null, ref: > U.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: "now()"]
}